@@ -53,6 +53,13 @@
 </tr>
 </table>
 <p>
+2003-09-12  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> www/api/types.html: Update description of MonitorHandler.
+
+</UL>
+<p>
 2003-09-11  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
