@@ -7,7 +7,7 @@
 	<META NAME="AUTHOR" CONTENT="Bob Friesenhahn">
 	<META NAME="CREATED" CONTENT="20030425;13574600">
 	<META NAME="CHANGEDBY" CONTENT="Bob Friesenhahn">
-	<META NAME="CHANGED" CONTENT="20030425;18490500">
+	<META NAME="CHANGED" CONTENT="20030912;13253900">
 	<META NAME="CLASSIFICATION" CONTENT="Documentation for GraphicsMagick C API Types">
 	<META NAME="DESCRIPTION" CONTENT="Documentation for C structures, typedefs, and enumerations used by GraphicsMagick.">
 	<STYLE>
@@ -137,7 +137,7 @@
     mapped,
     eof;
 
-  ExtendedSignedIntegralType
+  magick_off_t
     offset,
     size;
 
@@ -3808,10 +3808,97 @@ Members</B></P>
 </TABLE>
 <P STYLE="margin-bottom: 0in"><BR>
 </P>
+<P STYLE="margin-bottom: 0in">MonitorHandler is the function type to
+be used for the progress monitor callback. Its definition is as
+follows:</P>
+<P STYLE="margin-bottom: 0in"><BR>
+</P>
 <PRE>typedef unsigned int
-  (*MonitorHandler)(const char *,const ExtendedSignedIntegralType,
-    const ExtendedUnsignedIntegralType,ExceptionInfo *);</PRE><P STYLE="margin-bottom: 0in">
-<BR>
+  (*MonitorHandler)(const char *text, const magick_int64_t quantum,
+    const magick_uint64_t span, ExceptionInfo *exception);</PRE><P STYLE="margin-bottom: 0in">
+The operation of the monitor handler is described in the following
+table:</P>
+<TABLE WIDTH=100% BORDER=1 CELLPADDING=4 CELLSPACING=3>
+	<COL WIDTH=64*>
+	<COL WIDTH=64*>
+	<COL WIDTH=128*>
+	<TR VALIGN=TOP>
+		<TD WIDTH=25% BGCOLOR="#c0c0c0">
+			<P ALIGN=CENTER><B>Parameter</B></P>
+		</TD>
+		<TD WIDTH=25% BGCOLOR="#c0c0c0">
+			<P ALIGN=CENTER><B>Type</B></P>
+		</TD>
+		<TD WIDTH=50% BGCOLOR="#c0c0c0">
+			<P ALIGN=CENTER><B>Description</B></P>
+		</TD>
+	</TR>
+	<TR VALIGN=TOP>
+		<TD WIDTH=25% BGCOLOR="#c0c0c0">
+			<P>return status</P>
+		</TD>
+		<TD WIDTH=25% BGCOLOR="#c0c0c0">
+			<P>unsigned int</P>
+		</TD>
+		<TD WIDTH=50% BGCOLOR="#c0c0c0">
+			<P>The progress monitor should normally return True (a non-zero
+			value) if the operation is to continue. If the progress monitor
+			returns false, then the operation is will be aborted. This
+			mechanism allows a user to terminate a process which is taking too
+			long to complete.</P>
+		</TD>
+	</TR>
+	<TR VALIGN=TOP>
+		<TD WIDTH=25% BGCOLOR="#c0c0c0">
+			<P>text</P>
+		</TD>
+		<TD WIDTH=25% BGCOLOR="#c0c0c0">
+			<P>const char *</P>
+		</TD>
+		<TD WIDTH=50% BGCOLOR="#c0c0c0">
+			<P>A description of the current operation being performed.</P>
+		</TD>
+	</TR>
+	<TR VALIGN=TOP>
+		<TD WIDTH=25% BGCOLOR="#c0c0c0">
+			<P>quantum</P>
+		</TD>
+		<TD WIDTH=25% BGCOLOR="#c0c0c0">
+			<P>const magick_int64_t</P>
+		</TD>
+		<TD WIDTH=50% BGCOLOR="#c0c0c0">
+			<P>A value within the range of 0 to span which indicates the
+			degree of progress.</P>
+		</TD>
+	</TR>
+	<TR VALIGN=TOP>
+		<TD WIDTH=25% BGCOLOR="#c0c0c0">
+			<P>span</P>
+		</TD>
+		<TD WIDTH=25% BGCOLOR="#c0c0c0">
+			<P>const magick_uint64_t</P>
+		</TD>
+		<TD WIDTH=50% BGCOLOR="#c0c0c0">
+			<P>The total range that quantum will span.</P>
+		</TD>
+	</TR>
+	<TR VALIGN=TOP>
+		<TD WIDTH=25% BGCOLOR="#c0c0c0">
+			<P>exception</P>
+		</TD>
+		<TD WIDTH=25% BGCOLOR="#c0c0c0">
+			<P>exceptionInfo *</P>
+		</TD>
+		<TD WIDTH=50% BGCOLOR="#c0c0c0">
+			<P>If the progress monitor returns False (abort operation), it
+			should also update the structure passed via the exception
+			parameter so that an error message may be reported to the user.</P>
+		</TD>
+	</TR>
+</TABLE>
+<P STYLE="margin-bottom: 0in"><BR>
+</P>
+<P STYLE="margin-bottom: 0in"><BR>
 </P>
 <TABLE WIDTH=100% BORDER=0 CELLPADDING=2 CELLSPACING=0>
 	<COL WIDTH=256*>
@@ -4474,7 +4561,7 @@ pixels (&quot;Quantums&quot;) while they are being read, or written
 to, a pixel cache. The validity of these format specifications
 depends on whether the Image pixels are in RGB format, RGBA format,
 or CMYK format. The pixel Quantum size is determined by the Image
-depth (eight or sixteen bits). <BR><BR>
+depth (eight or sixteen bits). 
 </P>
 <P ALIGN=CENTER STYLE="margin-bottom: 0in"><B>RGB(A) Image Quantums</B></P>
 <TABLE COLS=2 WIDTH=100% BORDER=1 CELLPADDING=2 CELLSPACING=2 BGCOLOR="#cccccc">
@@ -4655,7 +4742,7 @@ Quantums</B></P>
 information in GraphicsMagick. 
 </P>
 <P STYLE="margin-bottom: 0in">The members of the RectangleInfo
-structure are shown in the following table: <BR><BR>
+structure are shown in the following table: 
 </P>
 <P ALIGN=CENTER STYLE="margin-bottom: 0in"><B>RectangleInfo Structure
 Members</B></P>
@@ -4757,7 +4844,7 @@ intent specifies the style of reproduction to be used during the
 evaluation of this profile in a sequence of profiles. It applies
 specifically to that profile in the sequence and not to the entire
 sequence. Typically, the user or application will set the rendering
-intent dynamically at runtime or embedding time.&quot; <BR><BR>
+intent dynamically at runtime or embedding time.&quot; 
 </P>
 <P ALIGN=CENTER STYLE="margin-bottom: 0in"><B>RenderingIntent</B></P>
 <TABLE WIDTH=100% BORDER=1 CELLPADDING=2 CELLSPACING=2 BGCOLOR="#cccccc">
